--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
           <div class="card">
             <img src="../${file}" class="card-img-top" alt="...">
             <div class="card-body">
-            <img src="../${profile}" width="100" data-view-component="true" class="octicon octicon-mark-github v-align-middle">
+            <img src="../${profile}" "width="50" class = border radius : 50%/>
               <h5 class="card-title">${title}</h5>
               <p class="card-text">${content}</p>
               <h6 class="card-subtitle mb-2 text-muted">${time}</h6>
