--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
     <title>Sparta Coding Club | Bootstrap Practice</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script>
      $(document).ready(function () {
         listing();
@@ -52,7 +53,7 @@
           <div class="card">
             <img src="../${file}" class="card-img-top" alt="...">
             <div class="card-body">
-            <img src="../${profile}"width="50" class = border radius : 50%/>
+            <img src="../${profile}"width="50" class="img-circle"alt=""/>
               <h5 class="card-title">${title}</h5>
               <p class="card-text">${content}</p>
               <h6 class="card-subtitle mb-2 text-muted">${time}</h6>
