--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
           <div class="card">
             <img src="../${file}" class="card-img-top" alt="...">
             <div class="card-body">
-            <img src="../${profile}"width="50" class="img-circle"alt=""/>
+            <img src="../${profile}" style="border-radius:50%;width:70px;height:70px;"class="card-img-top" alt="..."/>
               <h5 class="card-title">${title}</h5>
               <p class="card-text">${content}</p>
               <h6 class="card-subtitle mb-2 text-muted">${time}</h6>
